--- a/frontend/package.json
+++ b/frontend/package.json
@@ -5,14 +5,27 @@
   "type": "module",
   "scripts": {
     "dev": "vite",
-    "build": "tsc && vite build",
+    "build": "bunx --bun vite",
     "lint": "eslint . --ext ts,tsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
   "dependencies": {
+    "@material-ui/core": "^4.12.4",
+    "@material-ui/icons": "^4.11.3",
+    "@mui/icons-material": "^5.14.16",
+    "@mui/material": "^5.14.17",
+    "@types/react-i18next": "^8.1.0",
+    "bun": "^1.0.10",
+    "deno": "^0.1.1",
+    "dotenv": "^16.3.1",
+    "i18next-browser-languagedetector": "^7.1.0",
+    "i18next-http-backend": "^2.3.1",
+    "nodemon": "^3.0.1",
     "react": "^18.2.0",
+    "react-devtools": "^4.28.5",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.18.0"
+    "react-router-dom": "^6.18.0",
+    "require": "^2.4.20"
   },
   "devDependencies": {
     "@types/react": "^18.2.15",
