--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,7 +16,11 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
+    "@testing-library/react": "^14.1.2",
+    "@types/jest": "^29.5.10",
+    "@types/mocha": "^10.0.6",
     "@types/react-i18next": "^8.1.0",
+    "@types/testing-library__react": "^10.2.0",
     "bun": "^1.0.10",
     "deno": "^0.1.1",
     "dotenv": "^16.3.1",
@@ -35,6 +39,7 @@
     "@typescript-eslint/eslint-plugin": "^6.0.0",
     "@typescript-eslint/parser": "^6.0.0",
     "@vitejs/plugin-react": "^4.0.3",
+    "bun-types": "^1.0.14",
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
