--- a/backend/package.json
+++ b/backend/package.json
@@ -4,6 +4,8 @@
   "type": "module",
   "devDependencies": {
     "@types/bcrypt": "^5.0.2",
+    "@types/cookie": "^0.6.0",
+    "@types/jsonwebtoken": "^9.0.5",
     "bun-types": "^1.0.13"
   },
   "peerDependencies": {
@@ -11,6 +13,7 @@
   },
   "dependencies": {
     "bcrypt": "^5.1.1",
+    "cookie": "^0.6.0",
     "jsonwebtoken": "^9.0.2",
     "mongodb": "^6.3.0",
     "mongoose": "^8.0.1"
