--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,6 +16,7 @@
     "@material-ui/icons": "^4.11.3",
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
+    "@mui/styles": "^5.14.19",
     "@testing-library/react": "^14.1.2",
     "@types/jest": "^29.5.10",
     "@types/mocha": "^10.0.6",
@@ -43,7 +44,7 @@
     "eslint": "^8.45.0",
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.3",
-    "sass": "^1.69.5",
+    "sass": "latest",
     "typescript": "^5.0.2",
     "vite": "^4.4.5"
   }
