--- a/frontend/package.json
+++ b/frontend/package.json
@@ -17,16 +17,19 @@
     "@mui/icons-material": "^5.14.16",
     "@mui/material": "^5.14.17",
     "@mui/styles": "^5.14.19",
+    "@mui/x-date-pickers-pro": "^6.18.3",
     "@testing-library/react": "^14.1.2",
     "@types/jest": "^29.5.10",
     "@types/mocha": "^10.0.6",
     "@types/react-i18next": "^8.1.0",
     "@types/testing-library__react": "^10.2.0",
     "bun": "^1.0.10",
+    "dayjs": "^1.11.10",
     "deno": "^0.1.1",
     "dotenv": "^16.3.1",
     "i18next-browser-languagedetector": "^7.1.0",
     "i18next-http-backend": "^2.3.1",
+    "material-ui-dropzone": "^3.5.0",
     "nodemon": "^3.0.1",
     "react": "^18.2.0",
     "react-devtools": "^4.28.5",
